--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Moonlight CSS Template</title>
+        <title>Silda Hikmaya</title>
 <!-- 
 Moonlight Template 
 http://www.templatemo.com/tm-512-moonlight
@@ -36,10 +36,10 @@ http://www.templatemo.com/tm-512-moonlight
   
         <nav>
           <div class="logo">
-              <img src="img/logo.png" alt="Moon Light">
+              <img src="img/SH.jpeg" alt="Moon Light">
           </div>
           <div class="mini-logo">
-              <img src="img/mini_logo.png" alt="">
+              <img src="img/_alt="">
           </div>
           <ul>
             <li><a href="#1"><i class="fa fa-home"></i> <em>Home</em></a></li>
